--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,14 +6,17 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
-
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
-
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+    <h2 class="govuk-heading-m">v0.1</h2>
+      <p><a class="govuk-link" href="#">Prototype</a></p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="#">
+            Set up repo and prototype so we are ready to create content.</a></p>
+        </li>
+      </ul>
   </div>
 </div>
 
