link to Jira ticket for set up

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
       <p><a class="govuk-link" href="#">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <p class="govuk-body"><a class="govuk-link" href="#">
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3188">
             Set up repo and prototype so we are ready to create content.</a></p>
         </li>
       </ul>
