--- a/app/views/1/start.html
+++ b/app/views/1/start.html
@@ -9,7 +9,7 @@
     <h1 class="govuk-heading-xl">
       Start page
     </h1>
-    <p class="govuk-body">This is the start page</p>
+    <p class="govuk-body">This is the start page.</p>
   </div>
 </div>
 
