--- a/app/views/1/start.html
+++ b/app/views/1/start.html
@@ -10,6 +10,7 @@
       Start page
     </h1>
     <p class="govuk-body">This is the start page.</p>
+    <p class="govuk-body"><a href="page2.html">link to page 2</a></p>
   </div>
 </div>
 
