Start page links to placeholder offender details page
- set-up verification-report folder as we also expect to the Prototype
  to hold a pre-sentence report and it saves moving things in the
  future

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
       {{ serviceName }}
     </h1>
     <h2 class="govuk-heading-m">v0.2</h2>
-      <p><a class="govuk-link" href="/1/start.html">Prototype</a></p>
+      <p><a class="govuk-link" href="/2/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3194">
