--- a/app/views/2/verification-report/check-answers.html
+++ b/app/views/2/verification-report/check-answers.html
@@ -8,7 +8,7 @@
       <nav class="app-subnav" aria-labelledby="app-subnav-heading">
         <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
           <ul class="app-subnav__section">
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
             </li>
             <li class="app-subnav__section-item">
@@ -23,7 +23,7 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check answers</a>
             </li>
             <li class="app-subnav__section-item">
@@ -34,12 +34,12 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="offender-details" method="post" novalidate>
+        <form action="check-answers" method="post" novalidate>
           <span class="govuk-caption-xl">
             Jo Wade X1234567
           </span>
           <h1 class="govuk-heading-xl">
-            Offender Details
+            Check answers
           </h1>
           <div class="govuk-form-group">
             <p class="govuk-body govuk-label-wrapper">
