--- a/app/views/2/verification-report/electronic-monitoring.html
+++ b/app/views/2/verification-report/electronic-monitoring.html
@@ -8,7 +8,7 @@
       <nav class="app-subnav" aria-labelledby="app-subnav-heading">
         <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
           <ul class="app-subnav__section">
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
             </li>
             <li class="app-subnav__section-item">
@@ -17,7 +17,7 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Unpaid work</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring">Electronic monitoring</a>
             </li>
             <li class="app-subnav__section-item">
@@ -34,20 +34,21 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="offender-details" method="post" novalidate>
+        <form action="electronic-monitoring" method="post" novalidate>
           <span class="govuk-caption-xl">
             Jo Wade X1234567
           </span>
           <h1 class="govuk-heading-xl">
-            Offender Details
+            Electronic monitoring
+            {{data['verification-report-sections']}}
           </h1>
           <div class="govuk-form-group">
             <p class="govuk-body govuk-label-wrapper">
-              <label class="govuk-label" for="test">
-                What is the meaning of life, the universe and everything?
+              <label class="govuk-label" for="electronic-monitoring">
+                Electronic monitoring question?
               </label>
             </p>
-            <input class="govuk-input" id="test" name="test" type="text" value="{{data['test']}}">
+            <input class="govuk-input" id="electronic-monitoring" name="electronic-monitoring" type="text" value="{{data['electronic-monitoring']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
