--- a/app/views/2/verification-report/electronic-monitoring.html
+++ b/app/views/2/verification-report/electronic-monitoring.html
@@ -39,8 +39,7 @@
             Jo Wade X1234567
           </span>
           <h1 class="govuk-heading-xl">
-            Electronic monitoring
-            {{data['verification-report-sections']}}
+            Electronic monitoring questions
           </h1>
           <div class="govuk-form-group">
             <p class="govuk-body govuk-label-wrapper">
