--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,6 +9,14 @@
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
+    <h2 class="govuk-heading-m">v0.3</h2>
+      <p><a class="govuk-link" href="/2/verification-report/start.html">Prototype</a></p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3267">
+            Check answers has conditional sections.</a></p>
+        </li>
+      </ul>
     <h2 class="govuk-heading-m">v0.2</h2>
       <p><a class="govuk-link" href="/2/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
