:bug: electronic monitoring question out put in correct section
Check answers page was showing the answer for unpaid work in the
electronic monitoring section. This is now fixed.

--- a/app/views/3/verification-report/check-answers.html
+++ b/app/views/3/verification-report/check-answers.html
@@ -97,7 +97,7 @@
                 Electronic monitoring questions
               </dt>
               <dd class="govuk-summary-list__value">
-                {{data['unpaid-work']}}
+                {{data['electronic-monitoring']}}
               </dd>
               <dd class="govuk-summary-list__actions">
                 <a class="govuk-link" href="electronic-monitoring">
