Add in Current address

--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -56,6 +56,27 @@
                 </a>
               </dd>
             </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Current address
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['address-line-1']}}<br />
+                {% if (data['address-line-2']) %}
+                  {{data['address-line-2']}}<br />
+                {% endif %}
+                {{data['address-town']}}<br />
+                {% if (data['address-county']) %}
+                  {{data['address-county']}}<br />
+                {% endif %}
+                {{data['address-postcode']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="offender-details">
+                  Change<span class="govuk-visually-hidden"> offender details</span>
+                </a>
+              </dd>
+            </div>
           </dl>
           <h2 class="govuk-heading-m">Required sections</h2>
           <dl class="govuk-summary-list govuk-!-margin-bottom-9">
