--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -52,7 +52,7 @@
               </dd>
               <dd class="govuk-summary-list__actions">
                 <a class="govuk-link" href="offender-details">
-                  Change<span class="govuk-visually-hidden"> offender details</span>
+                  Change<span class="govuk-visually-hidden"> full name</span>
                 </a>
               </dd>
             </div>
@@ -73,7 +73,20 @@
               </dd>
               <dd class="govuk-summary-list__actions">
                 <a class="govuk-link" href="offender-details">
-                  Change<span class="govuk-visually-hidden"> offender details</span>
+                  Change<span class="govuk-visually-hidden"> address</span>
+                </a>
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Date of birth
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['date-of-birth-day']}}/{{data['date-of-birth-month']}}/{{data['date-of-birth-year']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="offender-details">
+                  Change<span class="govuk-visually-hidden"> date of birth</span>
                 </a>
               </dd>
             </div>
