--- a/app/views/4/verification-report/offender-details.html
+++ b/app/views/4/verification-report/offender-details.html
@@ -86,6 +86,46 @@
               </div>
             </fieldset>
           </div>
+          <div class="govuk-form-group">
+            <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                  <h1 class="govuk-fieldset__heading">
+                    Date of birth
+                  </h1>
+                </legend>
+                <div id="date-of-birth-hint" class="govuk-hint">
+                  For example, 27 3 2004
+                </div>
+                <div class="govuk-date-input" id="date-of-birth">
+                  <div class="govuk-date-input__item">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label govuk-date-input__label" for="date-of-birth-day">
+                        Day
+                      </label>
+                      <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="date-of-birth-day" name="date-of-birth-day" type="text" inputmode="numeric" value="{{data['date-of-birth-day']}}">
+                    </div>
+                  </div>
+                  <div class="govuk-date-input__item">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label govuk-date-input__label" for="date-of-birth-month">
+                        Month
+                      </label>
+                      <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="date-of-birth-month" name="date-of-birth-month" type="text" inputmode="numeric" value="{{data['date-of-birth-month']}}">
+                    </div>
+                  </div>
+                  <div class="govuk-date-input__item">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label govuk-date-input__label" for="date-of-birth-year">
+                        Year
+                      </label>
+                      <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="date-of-birth-year" name="date-of-birth-year" type="text" inputmode="numeric" value="{{data['date-of-birth-year']}}">
+                    </div>
+                  </div>
+                </div>
+              </fieldset>
+            </div>
+          </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
