Add offences text area

--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -90,6 +90,32 @@
                 </a>
               </dd>
             </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Case reference number
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['case-reference-number']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="offender-details">
+                  Change<span class="govuk-visually-hidden"> case reference number</span>
+                </a>
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Offences
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['offences']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="offender-details">
+                  Change<span class="govuk-visually-hidden"> case reference number</span>
+                </a>
+              </dd>
+            </div>
           </dl>
           <h2 class="govuk-heading-m">Required sections</h2>
           <dl class="govuk-summary-list govuk-!-margin-bottom-9">
