Fix incorrect id on full name

--- a/app/views/4/verification-report/offender-details.html
+++ b/app/views/4/verification-report/offender-details.html
@@ -12,6 +12,9 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Required sections</a>
             </li>
             <li class="app-subnav__section-item">
@@ -45,7 +48,7 @@
             <h2 class="govuk-heading-l" for="full-name">
               Full name
             </h2>
-            <input class="govuk-input" id="test" name="full-name" type="full-name" value="{{data['full-name']}}">
+            <input class="govuk-input" id="full-name" name="full-name" type="full-name" value="{{data['full-name']}}">
           </div>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
