--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -117,6 +117,22 @@
               </dd>
             </div>
           </dl>
+          <h2 class="govuk-heading-m">Common data</h2>
+          <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Domestic abuse checks
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['domestic-abuse-checks']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="common-data">
+                  Change<span class="govuk-visually-hidden"> domestic abuse checks</span>
+                </a>
+              </dd>
+            </div>
+          </dl>
           <h2 class="govuk-heading-m">Required sections</h2>
           <dl class="govuk-summary-list govuk-!-margin-bottom-9">
             <div class="govuk-summary-list__row">
