Added in safeguarding checks

--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -132,6 +132,19 @@
                 </a>
               </dd>
             </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Safeguarding checks
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['safeguarding-checks']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="common-data">
+                  Change<span class="govuk-visually-hidden"> Safeguarding checks</span>
+                </a>
+              </dd>
+            </div>
           </dl>
           <h2 class="govuk-heading-m">Required sections</h2>
           <dl class="govuk-summary-list govuk-!-margin-bottom-9">
