--- a/app/views/4/verification-report/common-data.html
+++ b/app/views/4/verification-report/common-data.html
@@ -42,13 +42,19 @@
             Jo Wade X1234567
           </span>
           <h1 class="govuk-heading-xl">
-            Offender Details
+            Common data
           </h1>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="domestic-abuse-checks">
               Domestic abuse checks
             </h2>
             <input class="govuk-input" id="test" name="domestic-abuse-checks" type="domestic-abuse-checks" value="{{data['domestic-abuse-checks']}}">
+          </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="safeguarding-checks">
+              Safeguarding checks
+            </h2>
+            <input class="govuk-input" id="test" name="safeguarding-checks" type="safeguarding-checks" value="{{data['safeguarding-checks']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
