Add in other address question

--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -145,6 +145,27 @@
                 </a>
               </dd>
             </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Other addresses
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['other-address-line-1']}}<br />
+                {% if (data['other-address-line-2']) %}
+                  {{data['other-address-line-2']}}<br />
+                {% endif %}
+                {{data['other-address-town']}}<br />
+                {% if (data['other-address-county']) %}
+                  {{data['other-address-county']}}<br />
+                {% endif %}
+                {{data['other-address-postcode']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="common-data">
+                  Change<span class="govuk-visually-hidden"> other addresses</span>
+                </a>
+              </dd>
+            </div>
           </dl>
           <h2 class="govuk-heading-m">Required sections</h2>
           <dl class="govuk-summary-list govuk-!-margin-bottom-9">
