--- a/app/views/4/verification-report/common-data.html
+++ b/app/views/4/verification-report/common-data.html
@@ -95,6 +95,12 @@
               </div>
             </fieldset>
           </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
+              Verify dependant and caring responsibilities
+            </h2>
+            <input class="govuk-input" id="test" name="dependant-caring-responsibilities" type="dependant-caring-responsibilities" value="{{data['dependant-caring-responsibilities']}}">
+          </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
