Add current employment

--- a/app/views/4/verification-report/common-data.html
+++ b/app/views/4/verification-report/common-data.html
@@ -99,7 +99,13 @@
             <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
               Verify dependant and caring responsibilities
             </h2>
-            <input class="govuk-input" id="test" name="dependant-caring-responsibilities" type="dependant-caring-responsibilities" value="{{data['dependant-caring-responsibilities']}}">
+            <input class="govuk-input" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" type="dependant-caring-responsibilities" value="{{data['dependant-caring-responsibilities']}}">
+          </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
+              Verify current employment
+            </h2>
+            <input class="govuk-input" id="verify-current-employment" name="verify-current-employment" type="verify-current-employment" value="{{data['verify-current-employment']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
