--- a/app/views/4/verification-report/unpaid-work.html
+++ b/app/views/4/verification-report/unpaid-work.html
@@ -12,6 +12,9 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Required sections</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
