Add DWP and supporting comments question
I accidentally forgot to commit the DWP work and its not a big thing
to add them both in as one.

--- a/app/views/4/verification-report/unpaid-work.html
+++ b/app/views/4/verification-report/unpaid-work.html
@@ -50,6 +50,18 @@
             </h2>
             <input class="govuk-input" id="verify-no-health-conditions" name="verify-no-health-conditions" type="verify-no-health-conditions" value="{{data['verify-no-health-conditions']}}">
           </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="verify-dwp-involvement">
+              Verify DWP involvement
+            </h2>
+            <input class="govuk-input" id="verify-dwp-involvement" name="verify-dwp-involvement" type="verify-dwp-involvement" value="{{data['verify-dwp-involvement']}}">
+          </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="unpaid-work-supporting-comments">
+              Unpaid work supporting comments
+            </h2>
+            <input class="govuk-input" id="unpaid-work-supporting-comments" name="unpaid-work-supporting-comments" type="unpaid-work-supporting-comments" value="{{data['unpaid-work-supporting-comments']}}">
+          </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
