--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -229,6 +229,32 @@
                   </a>
                 </dd>
               </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Verify DWP involvement
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  {{data['verify-dwp-involvement']}}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                  <a class="govuk-link" href="unpaid-work">
+                    Change<span class="govuk-visually-hidden"> verify DWP involvement</span>
+                  </a>
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Unpaid work supporting comments
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  {{data['unpaid-work-supporting-comments']}}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                  <a class="govuk-link" href="unpaid-work">
+                    Change<span class="govuk-visually-hidden"> unpaid work supporting comments</span>
+                  </a>
+                </dd>
+              </div>
             </dl>
           {% endif %}
           {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both') %}
